--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,9 @@
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
+connection = smart
+timeout = 60
+forks = 10
+inventory = inventory
+host_key_checking = False
+
